--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <!-- Main Content -->
     <aside id="leftMenu">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Book Trip</a></li>
-        <li><a href="#">Admin Login</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="book.php">Book Trip</a></li>
+        <li><a href="admin-add.php">Admin Login</a></li>
       </ul>
     </aside>
-    <div class="container">
+    <div id="container">
       <main id="main">
         <div id="home">
           <h1>
